fixing button text issues on iphone chrome

--- a/style.css
+++ b/style.css
@@ -133,8 +133,8 @@ body {
   color: #65584C;
   font-size: 25px;
   font-family: sans-serif;
-  letter-spacing: 2px;
-  text-align: center;
+  letter-spacing: 1px;
+  text-align: left;
   text-transform: uppercase;
 }
 
